k8s/taskflow-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskflow-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskflow-api
  template:
    metadata:
      labels:
        app: taskflow-api
    spec:
      containers:
        - name: taskflow-api
          image: taskflow-mini:2.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: taskflow-service
spec:
  selector:
    app: taskflow-api
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
